--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,21 +7,61 @@
     display: flex;
     justify-content: space-between;
     padding: 2rem;
-    width: 100%;
-    height: 100%;
-    max-width: 800px;
-    max-height: 800px;
-  
+    
 }
 .fa-regular, .fa-solid {
     margin-left: 0.5rem;
     color: #ffff;
 }
+.nav{
+    display: none;
+}
 
-
-body{
+header{
    
     background-image:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/assets/images/assets-img/assets-img/hero.webp);
-    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
+    max-width:900px;
+    height: 812px;
+  
+}
+
+/*This is css styles for the hero section*/
+.hero{
+position: relative;
+position: relative;
+    width: 30%;
+    height: 8rem;
+    margin-left: auto;
+    margin-right: auto;
+    top: 250px;
+    background: rgba(255, 255, 255, 0.83);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1.5rem;
+    text-align: center;
+    font-size: 1rem;
+}
+a{
+    color: black;
+}
+.hero li{
+    list-style: none;
+}
+
+@media (min-width: 900px) {
+    .nav{
+        display: flex;
+        position: absolute;
+       width: 379px;
+       height: 26px;
+       left: calc(50% - 379px/2 + 17.5px);
+       top: 35px;
+
+    }
+    .nav li{
+        list-style: none;
+    }
 }
