--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: poppins, sans-serif;
 }
 .logo{
     display: flex;
@@ -24,13 +25,14 @@ header{
     background-repeat: no-repeat;
     max-width:900px;
     height: 812px;
-  
+}
+.hero li{
+    font-family: dosis,sans-serif;
 }
 
 /*This is css styles for the hero section*/
 .hero{
-position: relative;
-position: relative;
+    position: relative;
     width: 30%;
     height: 8rem;
     margin-left: auto;
@@ -39,10 +41,11 @@ position: relative;
     background: rgba(255, 255, 255, 0.83);
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
     padding: 1.5rem;
     text-align: center;
     font-size: 1rem;
+    justify-content: center;
 }
 a{
     color: black;
@@ -50,25 +53,28 @@ a{
 .hero li{
     list-style: none;
 }
+.hero h1{
+
+}
 
 
 @media (min-width: 900px) {
     .nav{
-        display: flex;
-        position: absolute;
+       display: flex;
+       position: absolute;
        width: 379px;
        height: 26px;
        left: calc(50% - 379px/2 + 17.5px);
-       top: 35px;
+       top: 2px;
 
     }
     .nav li{
         list-style: none;
-        margin: 2rem;
-       
+        margin: 2rem; 
     }
     a{
+        color: white;
+        font-weight: 20px;
         text-decoration: none;
-        color: #ffff;
     }
 }
