--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,10 +4,12 @@
     box-sizing: border-box;
     font-family: poppins, sans-serif;
 }
-.logo{
+.nav_bar{
     display: flex;
     justify-content: space-between;
-    padding: 2rem;
+    align-items: center;
+    padding: 1rem;
+    width: 100%;
     
 }
 .nav-menu {
@@ -15,7 +17,7 @@
     gap: 0.8rem;
     color: #ffff;
 }
-.nav{
+.nav_links{
     display: none;
 }
 
@@ -24,32 +26,27 @@ header{
     background-image:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/assets/images/assets-img/assets-img/hero.webp);
     background-position: center center;
     background-repeat: no-repeat;
-    max-width:900px;
-    height: 812px;
+    /* max-width:900px; */
+    height: 580px;
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 .hero li{
     font-family: Dosis, sans-serif;
 }
 
 /*This is css styles for the hero section*/
-/* .hero{
-    position: relative;
-    width: 30%;
-    height: 8rem;
-    margin-left: auto;
-    margin-right: auto;
-    top: 250px;
-    background: rgba(255, 255, 255, 0.83);
+
+.hero_content{
+    width: 85%;
+    flex: 1;
     display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    padding: 2rem;
-    text-align: center;
-    font-size: 2rem;
     justify-content: center;
-} */
+    align-items: center;
+    align-self: center;
+
+}
 .hero{
     display: flex;
     flex-direction: column;
@@ -59,15 +56,16 @@ header{
     padding: 30px 15px;
     background-color: rgba(255, 255, 255, 0.8);
     font-size: 2rem;
-    align-self: center;
+    /* align-self: center; */
     width: 330px;
     height: 171px;
-    margin: auto auto;
-
+    /* margin: auto auto; */
+   
     
 }
 a{
     color: black;
+    text-decoration: none;
 }
 .hero li{
     list-style: none;
@@ -78,27 +76,36 @@ font-size: 26px;
 .btn{
     color: black;
     font-size: 16px;
+    text-decoration: underline;
 }
 
 
-@media (min-width: 900px) {
-    .nav{
-       display: flex;
-       position: absolute;
-       width: 379px;
-       height: 26px;
-       left: calc(50% - 379px/2 + 17.5px);
-       top: 20px;
 
-    }
-    .nav li{
-        list-style: none;
-        margin: 1rem; 
-    }
+@media (min-width: 768px) {
+   
     a{
         color: white;
         font-weight: 20px;
-        text-decoration: none;
+    
     }
+   header{
+    height: 580px;
+   }
 
+}
+@media (min-width: 1024px) {
+    .nav_links{
+        display: flex; 
+        gap: 0.8rem;
+        
+     }
+     .nav_links li{
+         list-style: none;
+         
+     }
+    .hero{
+        width: 521px;
+        height: 204px;
+    }
+   
 }
