--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: poppins, sans-serif;
 }
+/*css for the logo*/
+/*Mobile styles*/
+
 .nav_bar{
     display: flex;
     justify-content: space-between;
@@ -25,8 +28,6 @@ header{
    
     background-image:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/assets/images/assets-img/assets-img/hero.webp);
     background-position: center center;
-    background-repeat: no-repeat;
-    /* max-width:900px; */
     height: 580px;
     display: flex;
     flex-direction: column;
@@ -56,12 +57,9 @@ header{
     padding: 30px 15px;
     background-color: rgba(255, 255, 255, 0.8);
     font-size: 2rem;
-    /* align-self: center; */
     width: 330px;
     height: 171px;
-    /* margin: auto auto; */
-   
-    
+      
 }
 a{
     color: black;
@@ -80,7 +78,7 @@ font-size: 26px;
     text-decoration: underline;
 }
 
-
+/*This is the tablet styling*/
 
 @media (min-width: 768px) {
    
@@ -94,6 +92,8 @@ font-size: 26px;
    }
 
 }
+/*css for the desktop*/
+
 @media (min-width: 1024px) {
     .nav_links{
         display: flex; 
