--- a/assets/css/message.css
+++ b/assets/css/message.css
@@ -7,9 +7,168 @@
     gap: 1rem;
     justify-content: center;
     align-items: center;
+    
 }
 .furniture{
-    background-image: url(/assets/images/assets-img/assets-img/message_chair.webp);
+    background-image: url(/assets/images/assets-img/assets-img/message.webp);
     background-size: cover;
     background-position: center;
+    display: flex;
+    flex-direction: column;
+    height: 11rem;
+    width: 100%;
+    padding: 1rem;
+    font-size: 12px;
+}
+.basket{
+    background-image: url(/assets/images/assets-img/assets-img/Basket.webp);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    height: 11rem;
+    width: 100%;
+    padding: rem;
+    font-size: 12px;
+}
+.products{
+    width: 92%;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 3rem;
+}
+.products_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+    margin: 2rem auto;
+}
+
+.knight{
+    background-image: url(/assets/images/assets-img/assets-img/chair.webp);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 22rem;
+    width: 100%;
+    padding: 1rem;
+
+}
+.cup{
+    background-image: url(/assets/images/assets-img/assets-img/Cup.webp);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 22rem;
+    width: 100%;
+    padding: 1rem;
+    margin-bottom: 15px;
+
+}
+.bag{
+    background-image: url(/assets/images/assets-img/assets-img/bag.webp);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 22rem;
+    width: 100%;
+    padding: 1rem;
+    
+  
+}
+.holder{
+    background-image: url(/assets/images/assets-img/assets-img/Pencilholder.webp);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 22rem;
+    width: 100%;
+    padding: 1rem;
+
+  
+}
+.keyholder{
+    background-image: url(/assets/images/assets-img/assets-img/Keyholder.webp);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 22rem;
+    width: 100%;
+    padding: 1rem;
+    
+  
+}
+.canvas{
+    background-image: url(/assets/images/assets-img/assets-img/Handbag.webp);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 22rem;
+    width: 100%;
+    padding: 1rem;
+    
+    
+}
+.kars{
+    background-image: url(/assets/images/assets-img/assets-img/pegs\ holder.webp);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 22rem;
+    width: 100%;
+    padding: 1rem;
+    
+}
+.leather{
+    background-image: url(/assets/images/assets-img/assets-img/purse.webp);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 22rem;
+    width: 100%;
+    padding: 1rem;
+
+}
+.mirror{
+    background-image: url(/assets/images/assets-img/assets-img/mirror\ 1.jpg);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 22rem;
+    width: 100%;
+    padding: 1rem;
+    
+}
+.shower{
+    background-image: url(/assets/images/assets-img/assets-img/shower.jpg);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 22rem;
+    width: 100%;
+    padding: 1rem;
+}
+.mirror2{
+    background-image: url(/assets/images/assets-img/assets-img/mirror.jpg);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 22rem;
+    width: 100%;
+    padding: 1rem;
+    
 }
