--- a/assets/css/message.css
+++ b/assets/css/message.css
@@ -1,3 +1,5 @@
+/*This is the message styling*/
+/*Css for the mobile*/
 .message_container{
     width: 90%;
     height: 24rem;
@@ -31,6 +33,8 @@
     padding: rem;
     font-size: 12px;
 }
+/*This is the products styling*/
+/*Css for the mobile*/
 .products{
     width: 92%;
     height: auto;
@@ -172,3 +176,45 @@
     padding: 1rem;
     
 }
+.text{
+    width: 100%;
+    height: 21rem;
+    text-align: center;
+    color: white;
+    display: flex;
+   flex-direction: column;
+   justify-content: center;
+}
+/*This is the tablet styling*/
+
+@media (min-width: 768px) {
+    .products{
+        width: 91%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 3rem auto;
+        padding: 0.2rem 0 0 0;
+}
+.products_container{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0.8rem;
+    padding: 3rem 0 0 0;
+    flex: 1;
+}
+}
+@media (min-width: 1024px){
+    .products{
+
+
+        
+    }
+}
+    
+    
+
