--- a/assets/css/message.css
+++ b/assets/css/message.css
@@ -36,144 +36,103 @@
 /*This is the products styling*/
 /*Css for the mobile*/
 .products{
-    width: 92%;
-    height: auto;
     margin: 0 auto;
-    margin-top: 3rem;
+    width: 92%;
+    display: flex;
+    flex-direction: column;
+    height: auto;
 }
 .products_container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
     gap: 1rem;
     width: 100%;
-    margin: 2rem auto;
+    margin : 2rem auto
+}
+ .products .product{
+    display: flex;
+    flex-direction: column;
+    height: 22rem;
+    width: 100%;
+    padding: 1rem; 
 }
 
 .knight{
-    background-image: url(/assets/images/assets-img/assets-img/chair.webp);
+    background: linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/assets/images/assets-img/assets-img/chair.webp);
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    height: 22rem;
-    width: 100%;
-    padding: 1rem;
-
+    
 }
 .cup{
-    background-image: url(/assets/images/assets-img/assets-img/Cup.webp);
+    background: linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/assets/images/assets-img/assets-img/Cup.webp);
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    height: 22rem;
-    width: 100%;
-    padding: 1rem;
-    margin-bottom: 15px;
+    
 
 }
 .bag{
-    background-image: url(/assets/images/assets-img/assets-img/bag.webp);
+    background: linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/assets/images/assets-img/assets-img/bag.webp);
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    height: 22rem;
-    width: 100%;
-    padding: 1rem;
     
   
 }
 .holder{
-    background-image: url(/assets/images/assets-img/assets-img/Pencilholder.webp);
+    background: linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/assets/images/assets-img/assets-img/Pencilholder.webp);
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    height: 22rem;
-    width: 100%;
-    padding: 1rem;
+   
 
   
 }
 .keyholder{
-    background-image: url(/assets/images/assets-img/assets-img/Keyholder.webp);
+    background-image: linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/assets/images/assets-img/assets-img/Keyholder.webp);
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    height: 22rem;
-    width: 100%;
-    padding: 1rem;
-    
+   
   
 }
 .canvas{
-    background-image: url(/assets/images/assets-img/assets-img/Handbag.webp);
+    background: linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/assets/images/assets-img/assets-img/Handbag.webp);
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    height: 22rem;
-    width: 100%;
-    padding: 1rem;
+   
     
     
 }
 .kars{
-    background-image: url(/assets/images/assets-img/assets-img/pegs\ holder.webp);
+    background: linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/assets/images/assets-img/assets-img/pegs\ holder.webp);
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    height: 22rem;
-    width: 100%;
-    padding: 1rem;
-    
+   
 }
 .leather{
-    background-image: url(/assets/images/assets-img/assets-img/purse.webp);
+    background: linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/assets/images/assets-img/assets-img/purse.webp);
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    height: 22rem;
-    width: 100%;
-    padding: 1rem;
+   
 
 }
-.mirror{
+.news mirror{
     background-image: url(/assets/images/assets-img/assets-img/mirror\ 1.jpg);
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    height: 22rem;
-    width: 100%;
-    padding: 1rem;
-    
+   
 }
-.shower{
+.news shower{
     background-image: url(/assets/images/assets-img/assets-img/shower.jpg);
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    height: 22rem;
-    width: 100%;
-    padding: 1rem;
+    
 }
-.mirror2{
+.news 
+mirror2{
     background-image: url(/assets/images/assets-img/assets-img/mirror.jpg);
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    height: 22rem;
-    width: 100%;
-    padding: 1rem;
+    
     
 }
 .text{
@@ -185,36 +144,125 @@
    flex-direction: column;
    justify-content: center;
 }
+.news_container .news{
+    flex-basis: 100%;
+  }
+  .text1{
+    width: 100%;
+    height: 21rem;
+    text-align: center;
+    display: flex;
+   flex-direction: column;
+   justify-content: center;
+}
 /*This is the tablet styling*/
 
-@media (min-width: 768px) {
+/*desktop styling*/
+/* @media (min-width: 900px){
     .products{
-        width: 91%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 3rem auto;
-        padding: 0.2rem 0 0 0;
-}
-.products_container{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 0.8rem;
-    padding: 3rem 0 0 0;
-    flex: 1;
-}
-}
-@media (min-width: 1024px){
-    .products{
-
-
-        
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       align-items: center;
     }
-}
-    
-    
+    .products_container{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        flex: 1;
+        gap: 0.8rem;
+        padding-top: 2rem;
+    }
+} */
 
+    /* @media (max-width: 750px) {
+        .products .product{
+          flex-basis: 100%;
+        }
+        
+    } */
+
+    @media (min-width: 751px) and (max-width: 900px) {
+        
+          .news_container .news{
+            flex-basis: 33.33%;
+          } 
+          .products{
+            margin: 0 auto;
+            width: 98%;
+            display: flex;
+            flex-direction: column;
+            height: auto;
+            justify-content: center;
+            align-items: center;
+        }
+        .products_container{
+            display: flex;
+            flex-direction: row;
+            /* justify-content: center;
+            align-items: center; */
+            gap: 1rem;
+            width: 100%;
+            margin : 2rem auto;
+            flex: 1 0 auto;
+            flex-wrap: wrap;
+            height: auto;
+            
+
+        }
+        .products .product{
+            display: flex;
+            flex-direction: column;
+            height: 22rem;
+            width: 30%;
+            padding: 1rem; 
+            
+        }
+        .first{
+            flex-basis: 50%;
+        }
+         
+    }
+    @media (min-width: 901px) {
+
+          .news_container .news{
+            flex-basis: 33.33%;
+          }
+          .products{
+            margin: 0 auto;
+            width: 98%;
+            display: flex;
+            flex-direction: column;
+            height: auto;
+            justify-content: center;
+            align-items: center;
+        }
+        .products_container{
+            display: flex;
+            flex-direction: row;
+            /* justify-content: center;
+            align-items: center; */
+            gap: 1.5rem;
+            width: 100%;
+            margin : 2rem auto;
+            flex: 1 0 auto;
+            flex-wrap: wrap;
+            height: auto;
+            
+
+        }
+        .products .product{
+            display: flex;
+            flex-direction: column;
+            height: 22rem;
+            width: 23.5%;
+            padding: 1rem; 
+        }
+            .first{
+                flex-basis: 50%;
+            }
+
+    }
+    
