--- a/assets/css/message.css
+++ b/assets/css/message.css
@@ -115,21 +115,20 @@
    
 
 }
-.news mirror{
-    background-image: url(/assets/images/assets-img/assets-img/mirror\ 1.jpg);
+.news_container .mirror{
+    background-image: url(../images/assets-img/assets-img/mirror\ 1.jpg);
     background-position: center;
     background-size: cover;
    
 }
-.news shower{
-    background-image: url(/assets/images/assets-img/assets-img/shower.jpg);
+.news_container .shower{
+    background-image: url(../images/assets-img/assets-img/shower.jpg);
     background-position: center;
     background-size: cover;
     
 }
-.news 
-mirror2{
-    background-image: url(/assets/images/assets-img/assets-img/mirror.jpg);
+.news_container .mirror2{
+    background-image: url(../images/assets-img/assets-img/mirror.jpg);
     background-position: center;
     background-size: cover;
     
@@ -156,38 +155,10 @@ mirror2{
    justify-content: center;
 }
 /*This is the tablet styling*/
-
-/*desktop styling*/
-/* @media (min-width: 900px){
-    .products{
-       display: flex;
-       flex-direction: column;
-       justify-content: center;
-       align-items: center;
-    }
-    .products_container{
-        width: 100%;
-        height: auto;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        flex: 1;
-        gap: 0.8rem;
-        padding-top: 2rem;
-    }
-} */
-
-    /* @media (max-width: 750px) {
-        .products .product{
-          flex-basis: 100%;
-        }
-        
-    } */
-
     @media (min-width: 751px) and (max-width: 900px) {
         
           .news_container .news{
-            flex-basis: 33.33%;
+            flex-basis: 50%;
           } 
           .products{
             margin: 0 auto;
@@ -220,15 +191,22 @@ mirror2{
             padding: 1rem; 
             
         }
-        .first{
-            flex-basis: 50%;
+        .message{
+            width: 92%;
+            display: flex;
+            flex: 0 1 auto;
+            justify-content: space-between;
+            
         }
+        
+
+            
          
     }
+    /*This is the desktop styling product section*/
     @media (min-width: 901px) {
-
           .news_container .news{
-            flex-basis: 33.33%;
+            flex-basis: calc(33.33% - 20px);
           }
           .products{
             margin: 0 auto;
@@ -266,3 +244,25 @@ mirror2{
 
     }
     
+.news_container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    
+}
+.footer{
+    display: flex;
+    flex-direction: column;
+}
+ .footer_container .address{
+    display: flex;
+}
+
+
