--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -5,11 +5,19 @@
     
 }
 .footer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    background-color: #efefef;
+    padding: 35px 0 20px;
+    width: 100%;
     align-items: center;
+
+
 }
- .footer_container .address{
-    display: flex;
+
+
+ .footer_.address{
+   display: flex;
+   align-items: center;
+}
+.address p{
+    font-size: 24px;
 }
