--- a/assets/css/message.css
+++ b/assets/css/message.css
@@ -153,19 +153,35 @@
     display: flex;
    flex-direction: column;
    justify-content: center;
+   font-size: 20px;
+   font-weight: 500;
 }
 .news{
      margin-bottom: 30px;
 }
 .news .date{
-    width: 1rem;
-    height: 1 rem;
+    width: 70px;
+    height: 70px;
     background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 2rem;
 }
+.news .day-month{
+
+    padding: 15px;
+    width: 0.5rem;
+    height: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.news .day{
+    font-size: 25px;
+}
+
 /*This is the tablet styling*/
     @media (min-width: 751px) and (max-width: 900px) {
         
